--- a/tienda/templates/layouts/base.html
+++ b/tienda/templates/layouts/base.html
@@ -1,10 +1,13 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static '/css/app.css' %}" rel="stylesheet">
     <script src="https://kit.fontawesome.com/74db917412.js" crossorigin="anonymous"></script>
     <title>
         {% block title %}
@@ -12,10 +15,10 @@
         | Cafeteria
     </title>
 </head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-danger">
+<body class="bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
-          <a class="navbar-brand text-white" href="{% url 'index' %}">Cafeteria Inacap</a>
+          <a class="navbar-brand text-white" href="{% url 'index' %}">Espresso Inacap</a>
           <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -25,20 +28,26 @@
                 <a class="nav-link  active" aria-current="page" href="{% url 'index' %}">Inicio</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'pedido' %}">Pedido</a>
+                <a class="nav-link text-secondary " href="{% url 'productos' %}">Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'blog' %}">Blog</a>
+                <a class="nav-link text-secondary" href="{% url 'blog' %}">Blog</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-secondary" href="{% url 'contacto' %}">Contacto</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-secondary" href="{% url 'siguenos' %}">Siguenos</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Productos del dia
+                <a class="nav-link dropdown-toggle text-secondary" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Promos
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Mocaccino </a></li>
-                  <li><a class="dropdown-item" href="#">Café expreso</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Cafe con Leche</a></li>
+                  <li><a class="dropdown-item" href="{% url 'espresso' %}">Espresso</a></li>
+                  <li><a class="dropdown-item" href="{% url 'mocaccino' %}">Mocaccino </a></li>
+                  
+                  
                 </ul>
               </li>
               
@@ -51,25 +60,31 @@
         </div>
       </nav>
 
-      <header class="p-5 h-25 bg-dark">
+         
+      <header class="bg-dark">
+        <div class="hero"></div>
 
       </header>
+      
 
-      <div class="container-sm mt-3 mb-3" id="content">
-        <div class="text-center min-vh-100 border border-dark p-3" >
-          
-          
-          
-          {% block content %}
-               
-            {% endblock %}
+      <div class="p-3">
+        <div class="container-sm mt-3 mb-3 bg-dark rounded justify-content-center" id="content">
+          <div class="text-center min-vh-80 p-3" >
+            
 
+            {% block content %}
+                 
+              {% endblock %}
+  
+          </div>
+  
+          
+          
+  
         </div>
 
-        
-        
-
       </div>
+      
 
       
 
@@ -78,14 +93,16 @@
        
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
           
-          <a class="text-white text-decoration-none">Cafeteria Inacap</a>
+          <a class="text-white text-decoration-none">Emerio Suarez</a>
+          
         </div>
         
       </footer>
         
       
 
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+      <script src="{% static '/js/bootstrap.bundle.min.js' %}"></script>
+     
     
 </body>
 </html>
