--- a/tienda/templates/layouts/base.html
+++ b/tienda/templates/layouts/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -6,16 +6,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    {% load static %}
     <link href="{% static '/css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static '/css/app.css' %}" rel="stylesheet">
     <script src="https://kit.fontawesome.com/74db917412.js" crossorigin="anonymous"></script>
+    <script defer src="{% static '/js/activePage.js' %}" ></script>
     <title>
         {% block title %}
         {%  endblock  %}
         | Cafeteria
     </title>
 </head>
-<body class="bg-primary">
+<body class="bg-white">
     <nav class="navbar navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
           <a class="navbar-brand text-white" href="{% url 'index' %}">Espresso Inacap</a>
@@ -25,7 +27,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link  active" aria-current="page" href="{% url 'index' %}">Inicio</a>
+                <a class="nav-link inicio text-secondary" href="{% url 'index' %}">Inicio</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-secondary " href="{% url 'productos' %}">Productos</a>
@@ -38,17 +40,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link text-secondary" href="{% url 'siguenos' %}">Siguenos</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle text-secondary" href="" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Promos
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="{% url 'espresso' %}">Espresso</a></li>
-                  <li><a class="dropdown-item" href="{% url 'mocaccino' %}">Mocaccino </a></li>
-                  
-                  
-                </ul>
               </li>
               
             </ul>
