--- a/tienda/templates/productos/productos.html
+++ b/tienda/templates/productos/productos.html
@@ -14,7 +14,8 @@ Productos
 <div class="container-fluid row gap-3 justify-content-center">   
 {% for producto in productos %}
 <div class="card border border-dark p-2" style="width: 18rem;">
-    <img src="{{producto.imagen}}" class="card-img-top" alt="...">
+  
+    <img src="/tienda/resources/images/{{producto.imagen}}" class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title">{{producto.name}}</h5>
       <p class="card-text">{{producto.precio}}</p>
